# sync-action-items

./: .env.example  .gitignore  README.md  agent.py  config.py  eval-results.html  pyproject.toml
evals/: cases.py  runner.py
tests/: test_agent.py  test_config.py  test_evals_runner.py
