[project]
name = "arcade-takehome"
version = "0.1.0"
description = "Barebones OpenAI Agents SDK agent using Arcade tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcadepy>=1.3.0",
    "openai-agents>=0.6.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
